Fix schema issues with UDI templates

--- a/Samples/Scenario3_DentalToDentalReferral_Sample.htm
+++ b/Samples/Scenario3_DentalToDentalReferral_Sample.htm
@@ -135,28 +135,28 @@ td {
     +1(555)555-0002<BR></TD></TR></TBODY></TABLE>
 <H2><A name="toc">Table of Contents</A></H2>
 <UL>
-  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#IDU0AMKTLCCTZSMI5WC5XL4L2CIMZ1OR4OXZFKEHBLGXVRD5N4T0JL">ASSESSMENTS</A></LI>
-  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#IDNUI04MTBTC1EKU42NRKOY2A2XBVJCN01YL00MYBQVRZUTTTBXE0P">PROBLEMS</A></LI>
-  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#IDUEGAUTNPZD2UHRI3YVKI05UZXNWTYIQ3FAPJFLBGRYP5O0INSSCF">DENTAL 
+  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#IDJ3AUV1T1DOYBGRGHZMB2FEV5RICN0V04U0QQVYMLSQJIAC3QHGAJ">ASSESSMENTS</A></LI>
+  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#IDSPCFORA024OFLDCKFSUVQNPF3PWSGAORBUHTMPGFQB1503Q1P5ZF">PROBLEMS</A></LI>
+  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#IDP23RQJMUF5ICP0DGMFYEUTHG0OEDGZA1SWZLKXEBOMQMMKZ2QUBC">DENTAL 
   FINDINGS</A></LI>
-  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#IDRLC32I1ICI5RIWAJN5QLQJ0EMMH2RNJ1JZFHIHB51F0FIIMNMQUK">ALLERGIES</A></LI>
-  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#IDEAOL4XZM5HNEBJZMTOR2TPZWPLZRH05U3STWZYFSJL0RFTDAUNRL">HISTORY 
+  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#IDYD0XUEIBA2VPNARJQYITVNT35PWGZ2O0SNXSGJIY12YIGKATSRIK">ALLERGIES</A></LI>
+  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#IDC52HRECWSIAJDLOLFSI11FA0ZEEWMXY0KTUNTSJ5QVFJTVHAO1SC">HISTORY 
   OF PRESENT ILLNESS</A></LI>
-  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#IDGEGKTBTWR3C3FGQCBK1ZTHX13CQJ4Z54ZCL55VCWEP0WDVFKHIID">CHIEF 
+  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#IDAAOX4R5ICLRANT4DRF0HOQHVEJVQMOJOT1P4FHOPHXKP2RYJGNVC">CHIEF 
   COMPLAINT</A></LI>
-  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#ID4GU3JFKX0INVGOXJMLOB5GUGDAMMJQJKSMP0CNBRQL30IBT03BP">MEDICATIONS</A></LI>
-  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#ID05CHYBY2X0MHFQXLCW3PU1QBZDPYQMU3SJLJ25PSFZOX3FFUDCJM">INSURANCE 
+  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#IDFQMDORNSUJQVD3UC0CVTYYYH3JURVPACL0KOCOPPL5OJGKKGD2EO">MEDICATIONS</A></LI>
+  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#IDRZTSMEX4RUVJHCMWPXO54CZW1GBYX31T4SV2TSG4DSXLZQA1JZEB">INSURANCE 
   PROVIDERS</A></LI>
-  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#IDNS4GQIJ3A1W4PJC30VPDGXTO4H2YL1RA4V0QS1FPDYIY5ABGHZ0K">REASON 
+  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#IDBPRGAAWHQTK0MIEXCGDF1KEQFFANEMEFQXGAHQE4JRZVOO22NSNK">REASON 
   FOR REFERRAL</A></LI>
-  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#IDWHFLQTSZIXWYETZIPX3EHYMEAD4PJSCSWNNAJ1DZKKWCXDGL34AM">TREATMENT 
+  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#ID2O0I4BHXLNURBQ5OKUFQANTBGBLY4H2ZZ45OSCGDCKKPMOSZNCWP">TREATMENT 
   PLAN</A></LI>
-  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#IDTZQZFY25T4KKUSKSR5SUO4JKCGNX11N0K54ZRMSOBK1SVBDXVKD">PROCEDURES</A></LI>
-  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#IDMORNRJ2N02JPEFSL341SMRZZHJJ0O3I3PT50BUPCT4QFKDWQUJSL">VITAL 
+  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#IDU4YRUWOSJ1RTJTMXSFRU1VOA4IBSTQ15BRA1RGCOZOJKLTTILHC">PROCEDURES</A></LI>
+  <LI><A href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#IDYY2I2CL41VDDE0CLYUEEWX0AHMD0PTEJWSLMCCEOTNQVA1R5KSK">VITAL 
   SIGNS</A></LI></UL>
 <HR width="80%" size="2" align="left" color="teal">
 
-<H3><A name="IDU0AMKTLCCTZSMI5WC5XL4L2CIMZ1OR4OXZFKEHBLGXVRD5N4T0JL" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#toc">ASSESSMENTS</A></H3>
+<H3><A name="IDJ3AUV1T1DOYBGRGHZMB2FEV5RICN0V04U0QQVYMLSQJIAC3QHGAJ" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#toc">ASSESSMENTS</A></H3>
 <DIV>
 <P>#30 pulpal necrosis and perioapical pathosis with draining							fistula. 
 Clinical impression is that possible vital pulp remnants							remain. #30 
@@ -170,12 +170,12 @@ No sensitivity to palpation, pain upon biting with relief upon opening.
 impacted with possible full boney impaction. One cm swelling present on buccal 
 free-gingiva around #29 and #30 with sinus tract present #30B. Periodontal 
 pocket depth WNL.						 </P></DIV>
-<H3><A name="IDNUI04MTBTC1EKU42NRKOY2A2XBVJCN01YL00MYBQVRZUTTTBXE0P" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#toc">PROBLEMS</A></H3>
+<H3><A name="IDSPCFORA024OFLDCKFSUVQNPF3PWSGAORBUHTMPGFQB1503Q1P5ZF" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#toc">PROBLEMS</A></H3>
 <DIV>
 <OL>
   <LI> Mild, Hypertension</LI>
   <LI> Type 1 diabetes</LI></OL></DIV>
-<H3><A name="IDUEGAUTNPZD2UHRI3YVKI05UZXNWTYIQ3FAPJFLBGRYP5O0INSSCF" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#toc">DENTAL 
+<H3><A name="IDP23RQJMUF5ICP0DGMFYEUTHG0OEDGZA1SWZLKXEBOMQMMKZ2QUBC" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#toc">DENTAL 
 FINDINGS</A></H3>
 <DIV>
 <TABLE width="100%" class="narr_table" border="1">
@@ -236,11 +236,11 @@ FINDINGS</A></H3>
       										Caries Classification System moderate caries lesion). Other
       										WNL</TD>
     <TD>Tooth #30</TD></TR></TBODY></TABLE></DIV>
-<H3><A name="IDRLC32I1ICI5RIWAJN5QLQJ0EMMH2RNJ1JZFHIHB51F0FIIMNMQUK" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#toc">ALLERGIES</A></H3>
+<H3><A name="IDYD0XUEIBA2VPNARJQYITVNT35PWGZ2O0SNXSGJIY12YIGKATSRIK" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#toc">ALLERGIES</A></H3>
 <DIV>
 <UL>
   <LI> Penicillin G - 7980 </LI></UL></DIV>
-<H3><A name="IDEAOL4XZM5HNEBJZMTOR2TPZWPLZRH05U3STWZYFSJL0RFTDAUNRL" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#toc">HISTORY 
+<H3><A name="IDC52HRECWSIAJDLOLFSI11FA0ZEEWMXY0KTUNTSJ5QVFJTVHAO1SC" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#toc">HISTORY 
 OF PRESENT ILLNESS</A></H3>
 <DIV>
 <P>One month ago, pt. reports he had a MOBD amalgam restoration							(D2161 #30 
@@ -253,11 +253,11 @@ Classification System advanced caries lesion).</P>
 							days. He is able to eat regular food but only chews on the left side. He
 							takes 400 mg ibuprofen every 8 hours for pain. His last doses was 2
 							hours prior to this visit.</P></DIV>
-<H3><A name="IDGEGKTBTWR3C3FGQCBK1ZTHX13CQJ4Z54ZCL55VCWEP0WDVFKHIID" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#toc">CHIEF 
+<H3><A name="IDAAOX4R5ICLRANT4DRF0HOQHVEJVQMOJOT1P4FHOPHXKP2RYJGNVC" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#toc">CHIEF 
 COMPLAINT</A></H3>
 <DIV>
 <P>Pain in lower right Quadrant</P></DIV>
-<H3><A name="ID4GU3JFKX0INVGOXJMLOB5GUGDAMMJQJKSMP0CNBRQL30IBT03BP" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#toc">MEDICATIONS</A></H3>
+<H3><A name="IDFQMDORNSUJQVD3UC0CVTYYYH3JURVPACL0KOCOPPL5OJGKKGD2EO" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#toc">MEDICATIONS</A></H3>
 <DIV>
 <TABLE width="100%" class="narr_table" border="1">
   <THEAD>
@@ -282,10 +282,10 @@ COMPLAINT</A></H3>
     <TD>Acetaminophen 325mg tab</TD>
     <TD>2 tablets every 4 hours as needed</TD>
     <TD>Active</TD></TR></TBODY></TABLE></DIV>
-<H3><A name="ID05CHYBY2X0MHFQXLCW3PU1QBZDPYQMU3SJLJ25PSFZOX3FFUDCJM" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#toc">INSURANCE 
+<H3><A name="IDRZTSMEX4RUVJHCMWPXO54CZW1GBYX31T4SV2TSG4DSXLZQA1JZEB" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#toc">INSURANCE 
 PROVIDERS</A></H3>
 <DIV> Aetna Comprehensive Medical /Dental Insurance </DIV>
-<H3><A name="IDNS4GQIJ3A1W4PJC30VPDGXTO4H2YL1RA4V0QS1FPDYIY5ABGHZ0K" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#toc">REASON 
+<H3><A name="IDBPRGAAWHQTK0MIEXCGDF1KEQFFANEMEFQXGAHQE4JRZVOO22NSNK" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#toc">REASON 
 FOR REFERRAL</A></H3>
 <DIV>
 <P>Referral to endodontist for evaluation of #30 and endodontic							therapy. 
@@ -293,12 +293,12 @@ FOR REFERRAL</A></H3>
 <P>Suspect irreversible pulpitis with necrotic pulp and periapical
 							pathosis. Tooth is restorable despite possible incomplete fracture DB
 							cusp #30.</P></DIV>
-<H3><A name="IDWHFLQTSZIXWYETZIPX3EHYMEAD4PJSCSWNNAJ1DZKKWCXDGL34AM" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#toc">TREATMENT 
+<H3><A name="ID2O0I4BHXLNURBQ5OKUFQANTBGBLY4H2ZZ45OSCGDCKKPMOSZNCWP" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#toc">TREATMENT 
 PLAN</A></H3>
 <DIV>
 <OL>
   <LI>D3330 - endodontic therapy, molar tooth</LI></OL></DIV>
-<H3><A name="IDTZQZFY25T4KKUSKSR5SUO4JKCGNX11N0K54ZRMSOBK1SVBDXVKD" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#toc">PROCEDURES</A></H3>
+<H3><A name="IDU4YRUWOSJ1RTJTMXSFRU1VOA4IBSTQ15BRA1RGCOZOJKLTTILHC" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#toc">PROCEDURES</A></H3>
 <DIV>
 <TABLE width="100%" class="narr_table" border="1">
   <THEAD>
@@ -323,7 +323,7 @@ PLAN</A></H3>
     <TD>D0460</TD>
     <TD>Pulp vitality test</TD>
     <TD>N/A</TD></TR></TBODY></TABLE></DIV>
-<H3><A name="IDMORNRJ2N02JPEFSL341SMRZZHJJ0O3I3PT50BUPCT4QFKDWQUJSL" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/Samples/Post-Ballot/Scenario3_DentalToDentalReferral_Sample.xml#toc">VITAL 
+<H3><A name="IDYY2I2CL41VDDE0CLYUEEWX0AHMD0PTEJWSLMCCEOTNQVA1R5KSK" href="file:///C:/Users/rott/Documents/Projects/DHMS/ECCM/FEHRM/Dental%20Summary/IG%20Drafts/Draft%20Publication%20Package%2020210723/Scenario3_DentalToDentalReferral_Sample.xml#toc">VITAL 
 SIGNS</A></H3>
 <DIV>
 <TABLE width="100%" class="narr_table" border="1">
